// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/AutoGrid All 1`] = `
.c0 {
  max-width: 1200px;
  width: 100%;
  display: grid;
  grid-auto-rows: unset;
  grid-template-columns: repeat( auto-fill, minmax(300px,1fr) );
  grid-gap: 1rem;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
}

<div
  className="c0"
  rows="unset"
  width="1200px"
>
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
</div>
`;

exports[`Storyshots Atoms/AutoGrid Column 1`] = `
.c0 {
  max-width: 1200px;
  width: 100%;
  display: grid;
  grid-auto-rows: unset;
  grid-template-columns: repeat( auto-fill, minmax(10%,1fr) );
  grid-gap: 1rem;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
}

<div
  className="c0"
  rows="unset"
  width="1200px"
>
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
</div>
`;

exports[`Storyshots Atoms/AutoGrid Row 1`] = `
.c0 {
  max-width: 1200px;
  width: 100%;
  display: grid;
  grid-auto-rows: 10rem;
  grid-template-columns: repeat( auto-fill, minmax(300px,1fr) );
  grid-gap: 1rem;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
}

<div
  className="c0"
  rows="10rem"
  width="1200px"
>
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
</div>
`;

exports[`Storyshots Atoms/AutoGrid Width 1`] = `
.c0 {
  max-width: 500px;
  width: 100%;
  display: grid;
  grid-auto-rows: unset;
  grid-template-columns: repeat( auto-fill, minmax(300px,1fr) );
  grid-gap: 1rem;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
}

<div
  className="c0"
  rows="unset"
  width="500px"
>
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
  <div
    className="c1"
    color="#random"
  />
</div>
`;

exports[`Storyshots Atoms/Button All 1`] = `
.c1 {
  background: #720afb;
  border: 1px solid #720afb;
  color: #fff;
  box-shadow: 0 5px 10px rgba(0,0,0,0.12);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 5px;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c1:focus {
  outline: none;
}

.c1:hover {
  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: #6004d9;
  border: 1px solid #6004d9;
}

.c1:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c3 {
  background: #b988fd;
  border: 1px solid #b988fd;
  color: #fff;
  box-shadow: 0 5px 10px rgba(0,0,0,0.12);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 5px;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c3:focus {
  outline: none;
}

.c3:hover {
  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: #a160fc;
  border: 1px solid #a160fc;
}

.c3:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c4 {
  background: #08c8b8;
  border: 1px solid #08c8b8;
  color: #fff;
  box-shadow: 0 5px 10px rgba(0,0,0,0.12);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 5px;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c4:focus {
  outline: none;
}

.c4:hover {
  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: #06a194;
  border: 1px solid #06a194;
}

.c4:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c5 {
  background: #fc9b57;
  border: 1px solid #fc9b57;
  color: #fff;
  box-shadow: 0 5px 10px rgba(0,0,0,0.12);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 5px;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c5:focus {
  outline: none;
}

.c5:hover {
  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: #fb832f;
  border: 1px solid #fb832f;
}

.c5:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c6 {
  background: #fc4150;
  border: 1px solid #fc4150;
  color: #fff;
  box-shadow: 0 5px 10px rgba(0,0,0,0.12);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 5px;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c6:focus {
  outline: none;
}

.c6:hover {
  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: #fb192b;
  border: 1px solid #fb192b;
}

.c6:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c7 {
  background: #098dea;
  border: 1px solid #098dea;
  color: #fff;
  box-shadow: 0 5px 10px rgba(0,0,0,0.12);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 5px;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c7:focus {
  outline: none;
}

.c7:hover {
  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: #0775c3;
  border: 1px solid #0775c3;
}

.c7:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c8 {
  background: #fff;
  border: 1px solid #fff;
  color: #000;
  box-shadow: 0 5px 10px rgba(0,0,0,0.12);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 5px;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c8:focus {
  outline: none;
}

.c8:hover {
  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: #ebebeb;
  border: 1px solid #ebebeb;
}

.c8:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c9 {
  background: transparent;
  border: 1px solid transparent;
  color: #000;
  box-shadow: none;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 5px;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c9:focus {
  outline: none;
}

.c9:hover {
  box-shadow: none;
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: transparent;
  border: 1px solid transparent;
}

.c9:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 button {
  margin: 1rem;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        Primary
      </div>
    </div>
  </button>
  <button
    className="c3"
  >
    <div
      className="c2"
    >
      <div>
        Secondary
      </div>
    </div>
  </button>
  <button
    className="c4"
  >
    <div
      className="c2"
    >
      <div>
        Success
      </div>
    </div>
  </button>
  <button
    className="c5"
  >
    <div
      className="c2"
    >
      <div>
        Warning
      </div>
    </div>
  </button>
  <button
    className="c6"
  >
    <div
      className="c2"
    >
      <div>
        Danger
      </div>
    </div>
  </button>
  <button
    className="c7"
  >
    <div
      className="c2"
    >
      <div>
        Info
      </div>
    </div>
  </button>
  <button
    className="c8"
  >
    <div
      className="c2"
    >
      <div>
        White
      </div>
    </div>
  </button>
  <button
    className="c9"
  >
    <div
      className="c2"
    >
      <div>
        Transparent
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Custom Styles 1`] = `
.c1 {
  background: #720afb;
  border: 1px solid #720afb;
  color: #fff;
  box-shadow: 0 5px 10px rgba(0,0,0,0.12);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 5px;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c1:focus {
  outline: none;
}

.c1:hover {
  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: #6004d9;
  border: 1px solid #6004d9;
}

.c1:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 button {
  margin: 1rem;
}

<div
  className="c0"
>
  <button
    className="c1 custom-button"
  >
    <div
      className="c2"
    >
      <div>
        Custom Styles
      </div>
    </div>
  </button>
  <button
    className="c1"
  >
    <div
      className="c2"
    >
      <i>
        AirplaneSolid
      </i>
      <div>
        Custom Icon Styles
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Disabled 1`] = `
.c0 {
  background: #720afb;
  border: 1px solid #720afb;
  color: #fff;
  box-shadow: 0 5px 10px rgba(0,0,0,0.12);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 5px;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: #6004d9;
  border: 1px solid #6004d9;
}

.c0:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

<button
  className="c0"
  disabled={true}
>
  <div
    className="c1"
  >
    <div>
      Disabled
    </div>
  </div>
</button>
`;

exports[`Storyshots Atoms/Button Icon 1`] = `
.c1 {
  background: #720afb;
  border: 1px solid #720afb;
  color: #fff;
  box-shadow: 0 5px 10px rgba(0,0,0,0.12);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 5px;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c1:focus {
  outline: none;
}

.c1:hover {
  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: #6004d9;
  border: 1px solid #6004d9;
}

.c1:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 button {
  margin: 1rem;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    <div
      className="c2"
    >
      <i>
        AirplaneSolid
      </i>
      <div>
        Prepend Icon
      </div>
    </div>
  </button>
  <button
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        Append Icon
      </div>
      <i>
        ChromeBackMirrored
      </i>
    </div>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Rounded 1`] = `
.c0 {
  background: #720afb;
  border: 1px solid #720afb;
  color: #fff;
  box-shadow: 0 5px 10px rgba(0,0,0,0.12);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16px;
  border-radius: 3rem;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  cursor: pointer;
  height: 50px;
  line-height: 40px;
  min-width: 200px;
  padding: 0 27px;
  text-rendering: optimizeLegibility;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  white-space: nowrap;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  box-shadow: 0 8px 30px rgba(0,0,0,0.12);
  -webkit-transform: translate3d(0,-1px,0);
  -ms-transform: translate3d(0,-1px,0);
  transform: translate3d(0,-1px,0);
  background: #6004d9;
  border: 1px solid #6004d9;
}

.c0:disabled {
  cursor: not-allowed;
  background: #d5d1db;
  border: 1px solid #d5d1db;
  color: #90849f;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

<button
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      Pill shaped
    </div>
  </div>
</button>
`;

exports[`Storyshots Atoms/Checkbox All 1`] = `
.c1 {
  display: inline-block;
  color: #433c4d;
  cursor: pointer;
  position: relative;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16;
  cursor: pointer;
}

.c1 span {
  display: inline-block;
  position: relative;
  background-color: transparent;
  width: 25px;
  height: 25px;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  border: 1px solid #720afb;
  border-radius: 5px;
  vertical-align: -6px;
  margin-right: 0.5rem;
  -webkit-transition: background-color 150ms 200ms, -webkit-transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c1 span:before {
  content: '';
  width: 0;
  height: 2px;
  background: #ac6efd;
  position: absolute;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 12px;
  left: 9px;
  -webkit-transition: width 50ms ease 50ms;
  transition: width 50ms ease 50ms;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c1 span:after {
  content: '';
  width: 0;
  height: 2px;
  background: #ac6efd;
  position: absolute;
  -webkit-transform: rotate(310deg);
  -ms-transform: rotate(310deg);
  transform: rotate(310deg);
  top: 16px;
  left: 10px;
  -webkit-transition: width 50ms ease;
  transition: width 50ms ease;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c1:hover span:before {
  width: 5px;
  -webkit-transition: width 100ms ease;
  transition: width 100ms ease;
}

.c1:hover span:after {
  width: 10px;
  -webkit-transition: width 150ms ease 100ms;
  transition: width 150ms ease 100ms;
}

.c3 {
  display: inline-block;
  color: #433c4d;
  cursor: pointer;
  position: relative;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16;
  cursor: pointer;
}

.c3 span {
  display: inline-block;
  position: relative;
  background-color: transparent;
  width: 25px;
  height: 25px;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  border: 1px solid #b988fd;
  border-radius: 5px;
  vertical-align: -6px;
  margin-right: 0.5rem;
  -webkit-transition: background-color 150ms 200ms, -webkit-transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c3 span:before {
  content: '';
  width: 0;
  height: 2px;
  background: #f4ecff;
  position: absolute;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 12px;
  left: 9px;
  -webkit-transition: width 50ms ease 50ms;
  transition: width 50ms ease 50ms;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c3 span:after {
  content: '';
  width: 0;
  height: 2px;
  background: #f4ecff;
  position: absolute;
  -webkit-transform: rotate(310deg);
  -ms-transform: rotate(310deg);
  transform: rotate(310deg);
  top: 16px;
  left: 10px;
  -webkit-transition: width 50ms ease;
  transition: width 50ms ease;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c3:hover span:before {
  width: 5px;
  -webkit-transition: width 100ms ease;
  transition: width 100ms ease;
}

.c3:hover span:after {
  width: 10px;
  -webkit-transition: width 150ms ease 100ms;
  transition: width 150ms ease 100ms;
}

.c4 {
  display: inline-block;
  color: #433c4d;
  cursor: pointer;
  position: relative;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16;
  cursor: pointer;
}

.c4 span {
  display: inline-block;
  position: relative;
  background-color: transparent;
  width: 25px;
  height: 25px;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  border: 1px solid #08c8b8;
  border-radius: 5px;
  vertical-align: -6px;
  margin-right: 0.5rem;
  -webkit-transition: background-color 150ms 200ms, -webkit-transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c4 span:before {
  content: '';
  width: 0;
  height: 2px;
  background: #3ff7e8;
  position: absolute;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 12px;
  left: 9px;
  -webkit-transition: width 50ms ease 50ms;
  transition: width 50ms ease 50ms;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c4 span:after {
  content: '';
  width: 0;
  height: 2px;
  background: #3ff7e8;
  position: absolute;
  -webkit-transform: rotate(310deg);
  -ms-transform: rotate(310deg);
  transform: rotate(310deg);
  top: 16px;
  left: 10px;
  -webkit-transition: width 50ms ease;
  transition: width 50ms ease;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c4:hover span:before {
  width: 5px;
  -webkit-transition: width 100ms ease;
  transition: width 100ms ease;
}

.c4:hover span:after {
  width: 10px;
  -webkit-transition: width 150ms ease 100ms;
  transition: width 150ms ease 100ms;
}

.c5 {
  display: inline-block;
  color: #433c4d;
  cursor: pointer;
  position: relative;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16;
  cursor: pointer;
}

.c5 span {
  display: inline-block;
  position: relative;
  background-color: transparent;
  width: 25px;
  height: 25px;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  border: 1px solid #fc9b57;
  border-radius: 5px;
  vertical-align: -6px;
  margin-right: 0.5rem;
  -webkit-transition: background-color 150ms 200ms, -webkit-transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c5 span:before {
  content: '';
  width: 0;
  height: 2px;
  background: #fed7bb;
  position: absolute;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 12px;
  left: 9px;
  -webkit-transition: width 50ms ease 50ms;
  transition: width 50ms ease 50ms;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c5 span:after {
  content: '';
  width: 0;
  height: 2px;
  background: #fed7bb;
  position: absolute;
  -webkit-transform: rotate(310deg);
  -ms-transform: rotate(310deg);
  transform: rotate(310deg);
  top: 16px;
  left: 10px;
  -webkit-transition: width 50ms ease;
  transition: width 50ms ease;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c5:hover span:before {
  width: 5px;
  -webkit-transition: width 100ms ease;
  transition: width 100ms ease;
}

.c5:hover span:after {
  width: 10px;
  -webkit-transition: width 150ms ease 100ms;
  transition: width 150ms ease 100ms;
}

.c6 {
  display: inline-block;
  color: #433c4d;
  cursor: pointer;
  position: relative;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16;
  cursor: pointer;
}

.c6 span {
  display: inline-block;
  position: relative;
  background-color: transparent;
  width: 25px;
  height: 25px;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  border: 1px solid #fc4150;
  border-radius: 5px;
  vertical-align: -6px;
  margin-right: 0.5rem;
  -webkit-transition: background-color 150ms 200ms, -webkit-transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c6 span:before {
  content: '';
  width: 0;
  height: 2px;
  background: #fea5ac;
  position: absolute;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 12px;
  left: 9px;
  -webkit-transition: width 50ms ease 50ms;
  transition: width 50ms ease 50ms;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c6 span:after {
  content: '';
  width: 0;
  height: 2px;
  background: #fea5ac;
  position: absolute;
  -webkit-transform: rotate(310deg);
  -ms-transform: rotate(310deg);
  transform: rotate(310deg);
  top: 16px;
  left: 10px;
  -webkit-transition: width 50ms ease;
  transition: width 50ms ease;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c6:hover span:before {
  width: 5px;
  -webkit-transition: width 100ms ease;
  transition: width 100ms ease;
}

.c6:hover span:after {
  width: 10px;
  -webkit-transition: width 150ms ease 100ms;
  transition: width 150ms ease 100ms;
}

.c7 {
  display: inline-block;
  color: #433c4d;
  cursor: pointer;
  position: relative;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16;
  cursor: pointer;
}

.c7 span {
  display: inline-block;
  position: relative;
  background-color: transparent;
  width: 25px;
  height: 25px;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  border: 1px solid #098dea;
  border-radius: 5px;
  vertical-align: -6px;
  margin-right: 0.5rem;
  -webkit-transition: background-color 150ms 200ms, -webkit-transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c7 span:before {
  content: '';
  width: 0;
  height: 2px;
  background: #60baf9;
  position: absolute;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 12px;
  left: 9px;
  -webkit-transition: width 50ms ease 50ms;
  transition: width 50ms ease 50ms;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c7 span:after {
  content: '';
  width: 0;
  height: 2px;
  background: #60baf9;
  position: absolute;
  -webkit-transform: rotate(310deg);
  -ms-transform: rotate(310deg);
  transform: rotate(310deg);
  top: 16px;
  left: 10px;
  -webkit-transition: width 50ms ease;
  transition: width 50ms ease;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c7:hover span:before {
  width: 5px;
  -webkit-transition: width 100ms ease;
  transition: width 100ms ease;
}

.c7:hover span:after {
  width: 10px;
  -webkit-transition: width 150ms ease 100ms;
  transition: width 150ms ease 100ms;
}

.c2 {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  margin-right: 1rem;
}

<div
  className="c0"
>
  <label
    checked={false}
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
     Primary 
  </label>
  <label
    checked={false}
    className="c3"
  >
    <input
      checked={false}
      className="c2"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
     Secondary 
  </label>
  <label
    checked={false}
    className="c4"
  >
    <input
      checked={false}
      className="c2"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
     Success 
  </label>
  <label
    checked={false}
    className="c5"
  >
    <input
      checked={false}
      className="c2"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
     Warning 
  </label>
  <label
    checked={false}
    className="c6"
  >
    <input
      checked={false}
      className="c2"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
     Danger 
  </label>
  <label
    checked={false}
    className="c7"
  >
    <input
      checked={false}
      className="c2"
      onChange={[Function]}
      type="checkbox"
    />
    <span />
     Info 
  </label>
</div>
`;

exports[`Storyshots Atoms/Checkbox Custom Styles 1`] = `
.c0 {
  display: inline-block;
  color: #433c4d;
  cursor: pointer;
  position: relative;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16;
  cursor: pointer;
}

.c0 span {
  display: inline-block;
  position: relative;
  background-color: transparent;
  width: 25px;
  height: 25px;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  border: 1px solid #720afb;
  border-radius: 5px;
  vertical-align: -6px;
  margin-right: 0.5rem;
  -webkit-transition: background-color 150ms 200ms, -webkit-transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c0 span:before {
  content: '';
  width: 0;
  height: 2px;
  background: #ac6efd;
  position: absolute;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 12px;
  left: 9px;
  -webkit-transition: width 50ms ease 50ms;
  transition: width 50ms ease 50ms;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c0 span:after {
  content: '';
  width: 0;
  height: 2px;
  background: #ac6efd;
  position: absolute;
  -webkit-transform: rotate(310deg);
  -ms-transform: rotate(310deg);
  transform: rotate(310deg);
  top: 16px;
  left: 10px;
  -webkit-transition: width 50ms ease;
  transition: width 50ms ease;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c0:hover span:before {
  width: 5px;
  -webkit-transition: width 100ms ease;
  transition: width 100ms ease;
}

.c0:hover span:after {
  width: 10px;
  -webkit-transition: width 150ms ease 100ms;
  transition: width 150ms ease 100ms;
}

.c1 {
  display: none;
}

<label
  checked={false}
  className="c0 custom-checkbox"
>
  <input
    checked={false}
    className="c1"
    onChange={[Function]}
    type="checkbox"
  />
  <span />
   Custom Styles 
</label>
`;

exports[`Storyshots Atoms/Checkbox Disabled 1`] = `
.c0 {
  display: inline-block;
  color: #433c4d;
  cursor: pointer;
  position: relative;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16;
  cursor: not-allowed;
}

.c0 span {
  display: inline-block;
  position: relative;
  background-color: #e2dfe6;
  width: 25px;
  height: 25px;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  border: 1px solid #90849f;
  border-radius: 5px;
  vertical-align: -6px;
  margin-right: 0.5rem;
  -webkit-transition: background-color 150ms 200ms, -webkit-transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transform: unset;
  -ms-transform: unset;
  transform: unset;
}

.c0 span:before {
  content: '';
  width: 0;
  height: 2px;
  background: #ac6efd;
  position: absolute;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 12px;
  left: 9px;
  -webkit-transition: width 50ms ease 50ms;
  transition: width 50ms ease 50ms;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c0 span:after {
  content: '';
  width: 0;
  height: 2px;
  background: #ac6efd;
  position: absolute;
  -webkit-transform: rotate(310deg);
  -ms-transform: rotate(310deg);
  transform: rotate(310deg);
  top: 16px;
  left: 10px;
  -webkit-transition: width 50ms ease;
  transition: width 50ms ease;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c0:hover span:before {
  width: 5px;
  -webkit-transition: width 100ms ease;
  transition: width 100ms ease;
}

.c0:hover span:after {
  width: 10px;
  -webkit-transition: width 150ms ease 100ms;
  transition: width 150ms ease 100ms;
}

.c1 {
  display: none;
}

<label
  checked={false}
  className="c0"
  disabled={true}
>
  <input
    checked={false}
    className="c1"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <span />
   Disabled 
</label>
`;

exports[`Storyshots Atoms/Checkbox Initial 1`] = `
.c0 {
  display: inline-block;
  color: #433c4d;
  cursor: pointer;
  position: relative;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-weight: 200;
  font-size: 16;
  cursor: pointer;
}

.c0 span {
  display: inline-block;
  position: relative;
  background-color: #fff;
  width: 25px;
  height: 25px;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
  border: 1px solid #720afb;
  border-radius: 5px;
  vertical-align: -6px;
  margin-right: 0.5rem;
  -webkit-transition: background-color 150ms 200ms, -webkit-transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78,-1.22,0.17,1.89);
  -webkit-transform: scale(1.15);
  -ms-transform: scale(1.15);
  transform: scale(1.15);
}

.c0 span:before {
  content: '';
  width: 5px;
  height: 2px;
  background: #720afb;
  position: absolute;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 12px;
  left: 9px;
  -webkit-transition: width 50ms ease 50ms;
  transition: width 50ms ease 50ms;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c0 span:after {
  content: '';
  width: 10px;
  height: 2px;
  background: #720afb;
  position: absolute;
  -webkit-transform: rotate(310deg);
  -ms-transform: rotate(310deg);
  transform: rotate(310deg);
  top: 16px;
  left: 10px;
  -webkit-transition: width 50ms ease;
  transition: width 50ms ease;
  -webkit-transform-origin: 0% 0%;
  -ms-transform-origin: 0% 0%;
  transform-origin: 0% 0%;
}

.c0:hover span:before {
  width: 5px;
  -webkit-transition: width 100ms ease;
  transition: width 100ms ease;
}

.c0:hover span:after {
  width: 10px;
  -webkit-transition: width 150ms ease 100ms;
  transition: width 150ms ease 100ms;
}

.c1 {
  display: none;
}

<label
  checked={true}
  className="c0"
>
  <input
    checked={true}
    className="c1"
    onChange={[Function]}
    type="checkbox"
  />
  <span />
   Default Checked 
</label>
`;

exports[`Storyshots Atoms/Col All 1`] = `
.c0 {
  width: 100%;
  max-width: 1200px;
  margin: auto;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  width: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0.5rem;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c2 {
  width: calc(50% - 0.2rem*2);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c3 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
  width: 100%;
}

<div
  className="c0"
  width="1200px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      size={6}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
    <div
      className="c2"
      size={6}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
      size={6}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
    <div
      className="c2"
      size={6}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Col Context 1`] = `
.c0 {
  width: 100%;
  max-width: 1200px;
  margin: auto;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  width: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0.5rem;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c2 {
  width: calc(50% - 0.2rem*2);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c4 {
  width: calc(25% - 0.2rem*2);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c3 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
  width: 100%;
}

<div
  className="c0"
  width="1200px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      size={6}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
    <div
      className="c2"
      size={6}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c4"
      size={3}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
    <div
      className="c4"
      size={3}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
    <div
      className="c4"
      size={3}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
    <div
      className="c4"
      size={3}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Col Custom Styles 1`] = `
.c0 {
  width: 100%;
  max-width: 1200px;
  margin: auto;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  width: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0.5rem;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c2 {
  width: calc(50% - 0.2rem*2);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c3 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
  width: 100%;
}

<div
  className="c0"
  width="1200px"
>
  <div
    className="c1"
  >
    <div
      className="c2 custom-column"
      size={6}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
    <div
      className="c2 custom-column"
      size={6}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Col Size 1`] = `
.c0 {
  width: 100%;
  max-width: 1200px;
  margin: auto;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  width: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0.5rem;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c2 {
  width: calc(75% - 0.2rem*2);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c4 {
  width: calc(25% - 0.2rem*2);
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c3 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
  width: 100%;
}

<div
  className="c0"
  width="1200px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      size={9}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
    <div
      className="c4"
      size={3}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c4"
      size={3}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
    <div
      className="c4"
      size={3}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
    <div
      className="c4"
      size={3}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
    <div
      className="c4"
      size={3}
    >
      <div
        className="c3"
        color="#random"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Container All 1`] = `
.c0 {
  width: 100%;
  max-width: 1200px;
  margin: auto;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
  width: 100%;
}

<div
  className="c0"
  width="1200px"
>
  <div
    className="c1"
    color="#random"
  />
</div>
`;

exports[`Storyshots Atoms/Container Custom Styles 1`] = `
.c0 {
  width: 100%;
  max-width: 1200px;
  margin: auto;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
  width: 100%;
}

<div
  className="c0 custom-container"
  width="1200px"
>
  <div
    className="c1"
    color="#random"
  />
</div>
`;

exports[`Storyshots Atoms/Container Width 1`] = `
.c0 {
  width: 100%;
  max-width: 500px;
  margin: auto;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
  width: 100%;
}

<div
  className="c0"
  width="500px"
>
  <div
    className="c1"
    color="#random"
  />
</div>
`;

exports[`Storyshots Atoms/Icon All 1`] = `
.c0 i {
  margin: 1rem;
}

<div
  className="c0"
>
  <i>
    AirplaneSolid
  </i>
  <i>
    AccountManagement
  </i>
  <i>
    ArrangeSendToBack
  </i>
  <i>
    AustralianRules
  </i>
  <i>
    AuthenticatorApp
  </i>
  <i>
    BeerMug
  </i>
</div>
`;

exports[`Storyshots Atoms/Icon Custom Styles 1`] = `
<i>
  AirplaneSolid
</i>
`;

exports[`Storyshots Atoms/Icon Size 1`] = `
.c0 i {
  margin: 1rem;
}

<div
  className="c0"
>
  <i>
    AirplaneSolid
  </i>
  <i>
    AccountManagement
  </i>
  <i>
    ArrangeSendToBack
  </i>
  <i>
    AustralianRules
  </i>
  <i>
    AuthenticatorApp
  </i>
  <i>
    BeerMug
  </i>
</div>
`;

exports[`Storyshots Atoms/Input All 1`] = `
.c0 {
  display: block;
  margin-bottom: -1px;
}

.c1 {
  width: 100%;
  max-width: 100%;
  position: relative;
  padding: 1px;
  border-radius: 5px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #a59cb2;
  border-radius: 5px;
  padding-left: 5px;
  padding-right: 5px;
  background: #fff;
  -webkit-transition: border-color 0.2s linear;
  transition: border-color 0.2s linear;
  z-index: 1;
  position: relative;
}

.c3 {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding-left: 15px;
  padding-right: 20px;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  height: 48px;
}

.c3::-webkit-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c3::-moz-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c3:-ms-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c3::placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c3:focus {
  border: none;
  outline: none;
}

.c3:active {
  border: none;
  outline: none;
}

.c3:disabled {
  cursor: not-allowed;
  background: #e2dfe6;
  color: #fff;
}

.c4 {
  background: #720afb;
  content: '';
  height: 0%;
  width: 0%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        className="c3"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Basic input"
      />
    </div>
    <div
      className="c4"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Custom Styles 1`] = `
.c1 {
  display: block;
  margin-bottom: -1px;
}

.c2 {
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  color: #736783;
  font-weight: 200;
  font-size: 14px;
  line-height: 2rem;
  margin-left: 1px;
}

.c3 {
  width: 100%;
  max-width: 100%;
  position: relative;
  padding: 1px;
  border-radius: 5px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #a59cb2;
  border-radius: 5px;
  padding-left: 5px;
  padding-right: 5px;
  background: #fff;
  -webkit-transition: border-color 0.2s linear;
  transition: border-color 0.2s linear;
  z-index: 1;
  position: relative;
}

.c5 {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding-left: 15px;
  padding-right: 20px;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  height: 48px;
}

.c5::-webkit-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5::-moz-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5:-ms-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5::placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5:focus {
  border: none;
  outline: none;
}

.c5:active {
  border: none;
  outline: none;
}

.c5:disabled {
  cursor: not-allowed;
  background: #e2dfe6;
  color: #fff;
}

.c6 {
  background: #720afb;
  content: '';
  height: 0%;
  width: 0%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c0 > div {
  margin-top: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1 custom-input"
  >
    <label
      className="c2"
    >
      Custom
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <i>
          HomeGroup
        </i>
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Custom styles"
        />
      </div>
      <div
        className="c6"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <i>
          HomeGroup
        </i>
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Custom icon styles"
        />
      </div>
      <div
        className="c6"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Disabled 1`] = `
.c1 {
  display: block;
  margin-bottom: -1px;
}

.c2 {
  width: 100%;
  max-width: 100%;
  position: relative;
  padding: 1px;
  border-radius: 5px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #a59cb2;
  border-radius: 5px;
  padding-left: 5px;
  padding-right: 5px;
  background: #e2dfe6;
  -webkit-transition: border-color 0.2s linear;
  transition: border-color 0.2s linear;
  z-index: 1;
  position: relative;
}

.c4 {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding-left: 15px;
  padding-right: 20px;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  height: 48px;
}

.c4::-webkit-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4::-moz-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4:-ms-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4::placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4:focus {
  border: none;
  outline: none;
}

.c4:active {
  border: none;
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
  background: #e2dfe6;
  color: #fff;
}

.c5 {
  background: #720afb;
  content: '';
  height: 0%;
  width: 0%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c0 > div {
  margin-top: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        disabled={true}
      >
        <input
          className="c4"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Disabled"
        />
      </div>
      <div
        className="c5"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        disabled={true}
      >
        <i>
          HomeGroup
        </i>
        <input
          className="c4"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Disabled with icon"
        />
      </div>
      <div
        className="c5"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Fill Variants 1`] = `
.c1 {
  display: block;
  margin-bottom: -1px;
}

.c2 {
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  color: #736783;
  font-weight: 200;
  font-size: 14px;
  line-height: 2rem;
  margin-left: 1px;
}

.c3 {
  width: 100%;
  max-width: 100%;
  position: relative;
  padding: 1px;
  border-radius: 5px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid transparent;
  border-radius: 5px;
  padding-left: 5px;
  padding-right: 5px;
  background: #fff;
  -webkit-transition: border-color 0.2s linear;
  transition: border-color 0.2s linear;
  z-index: 1;
  position: relative;
}

.c5 {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding-left: 15px;
  padding-right: 20px;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  height: 48px;
}

.c5::-webkit-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5::-moz-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5:-ms-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5::placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5:focus {
  border: none;
  outline: none;
}

.c5:active {
  border: none;
  outline: none;
}

.c5:disabled {
  cursor: not-allowed;
  background: #e2dfe6;
  color: #fff;
}

.c6 {
  background: #720afb;
  content: '';
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c7 {
  background: #b988fd;
  content: '';
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c8 {
  background: #08c8b8;
  content: '';
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c9 {
  background: #fc4150;
  content: '';
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c10 {
  background: #fc9b57;
  content: '';
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c11 {
  background: #098dea;
  content: '';
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c0 > div {
  margin-top: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Primary
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <i>
          HomeGroup
        </i>
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Primary"
        />
      </div>
      <div
        className="c6"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Secondary
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <i>
          Commitments
        </i>
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Secondary"
        />
      </div>
      <div
        className="c7"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Success
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Success"
        />
        <i>
          Accept
        </i>
      </div>
      <div
        className="c8"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Danger
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Danger"
        />
        <i>
          AlertSolid
        </i>
      </div>
      <div
        className="c9"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Warning
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Warning"
        />
        <i>
          Warning
        </i>
      </div>
      <div
        className="c10"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Info
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <i>
          Hotel
        </i>
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Info"
        />
      </div>
      <div
        className="c11"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Icons 1`] = `
.c1 {
  display: block;
  margin-bottom: -1px;
}

.c2 {
  width: 100%;
  max-width: 100%;
  position: relative;
  padding: 1px;
  border-radius: 5px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #a59cb2;
  border-radius: 5px;
  padding-left: 5px;
  padding-right: 5px;
  background: #fff;
  -webkit-transition: border-color 0.2s linear;
  transition: border-color 0.2s linear;
  z-index: 1;
  position: relative;
}

.c4 {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding-left: 15px;
  padding-right: 20px;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  height: 48px;
}

.c4::-webkit-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4::-moz-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4:-ms-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4::placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4:focus {
  border: none;
  outline: none;
}

.c4:active {
  border: none;
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
  background: #e2dfe6;
  color: #fff;
}

.c5 {
  background: #720afb;
  content: '';
  height: 0%;
  width: 0%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c0 > div {
  margin-top: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <i>
          Search
        </i>
        <input
          className="c4"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Search the things"
        />
      </div>
      <div
        className="c5"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <input
          className="c4"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Look at this data"
        />
        <i>
          DelveAnalytics
        </i>
      </div>
      <div
        className="c5"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Label 1`] = `
.c0 {
  display: block;
  margin-bottom: -1px;
}

.c1 {
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  color: #736783;
  font-weight: 200;
  font-size: 14px;
  line-height: 2rem;
  margin-left: 1px;
}

.c2 {
  width: 100%;
  max-width: 100%;
  position: relative;
  padding: 1px;
  border-radius: 5px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #a59cb2;
  border-radius: 5px;
  padding-left: 5px;
  padding-right: 5px;
  background: #fff;
  -webkit-transition: border-color 0.2s linear;
  transition: border-color 0.2s linear;
  z-index: 1;
  position: relative;
}

.c4 {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding-left: 15px;
  padding-right: 20px;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  height: 48px;
}

.c4::-webkit-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4::-moz-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4:-ms-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4::placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c4:focus {
  border: none;
  outline: none;
}

.c4:active {
  border: none;
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
  background: #e2dfe6;
  color: #fff;
}

.c5 {
  background: #720afb;
  content: '';
  height: 0%;
  width: 0%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    Label here
  </label>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <input
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Input label"
      />
    </div>
    <div
      className="c5"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Input Variants 1`] = `
.c1 {
  display: block;
  margin-bottom: -1px;
}

.c2 {
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  color: #736783;
  font-weight: 200;
  font-size: 14px;
  line-height: 2rem;
  margin-left: 1px;
}

.c3 {
  width: 100%;
  max-width: 100%;
  position: relative;
  padding: 1px;
  border-radius: 5px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #a59cb2;
  border-radius: 5px;
  padding-left: 5px;
  padding-right: 5px;
  background: #fff;
  -webkit-transition: border-color 0.2s linear;
  transition: border-color 0.2s linear;
  z-index: 1;
  position: relative;
}

.c5 {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding-left: 15px;
  padding-right: 20px;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  height: 48px;
}

.c5::-webkit-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5::-moz-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5:-ms-input-placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5::placeholder {
  color: #a59cb2;
  font-weight: 200;
}

.c5:focus {
  border: none;
  outline: none;
}

.c5:active {
  border: none;
  outline: none;
}

.c5:disabled {
  cursor: not-allowed;
  background: #e2dfe6;
  color: #fff;
}

.c6 {
  background: #720afb;
  content: '';
  height: 0%;
  width: 0%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c7 {
  background: #b988fd;
  content: '';
  height: 0%;
  width: 0%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c8 {
  background: #08c8b8;
  content: '';
  height: 0%;
  width: 0%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c9 {
  background: #fc4150;
  content: '';
  height: 0%;
  width: 0%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c10 {
  background: #fc9b57;
  content: '';
  height: 0%;
  width: 0%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c11 {
  background: #098dea;
  content: '';
  height: 0%;
  width: 0%;
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transition: height 0.2s,width 0.2s 0.1s;
  transition: height 0.2s,width 0.2s 0.1s;
  z-index: 0;
  border-radius: 5px;
}

.c0 > div {
  margin-top: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Primary
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <i>
          HomeGroup
        </i>
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Primary"
        />
      </div>
      <div
        className="c6"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Secondary
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <i>
          Commitments
        </i>
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Secondary"
        />
      </div>
      <div
        className="c7"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Success
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Success"
        />
        <i>
          Accept
        </i>
      </div>
      <div
        className="c8"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Danger
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Danger"
        />
        <i>
          AlertSolid
        </i>
      </div>
      <div
        className="c9"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Warning
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Warning"
        />
        <i>
          Warning
        </i>
      </div>
      <div
        className="c10"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Info
    </label>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <i>
          Hotel
        </i>
        <input
          className="c5"
          onBlur={[Function]}
          onFocus={[Function]}
          placeholder="Info"
        />
      </div>
      <div
        className="c11"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Radio All 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  margin-right: 1.5rem;
}

.c1 {
  line-height: 3.3rem;
  cursor: pointer;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  cursor: pointer;
}

.c1:hover > span > span {
  -webkit-transform: scale(0.6);
  -ms-transform: scale(0.6);
  transform: scale(0.6);
  opacity: 1;
}

.c2 {
  display: none;
}

.c3 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #720afb;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c5 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #b988fd;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c7 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #08c8b8;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c9 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #fc9b57;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c11 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #fc4150;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c13 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #098dea;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c4 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #ac6efd;
  opacity: 0);
}

.c6 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #f4ecff;
  opacity: 0);
}

.c8 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #3ff7e8;
  opacity: 0);
}

.c10 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #fed7bb;
  opacity: 0);
}

.c12 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #fea5ac;
  opacity: 0);
}

.c14 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #60baf9;
  opacity: 0);
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c3"
    >
      <span
        className="c4"
      />
    </span>
     Primary 
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c5"
    >
      <span
        className="c6"
      />
    </span>
     Secondary 
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c7"
    >
      <span
        className="c8"
      />
    </span>
     Success 
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c9"
    >
      <span
        className="c10"
      />
    </span>
     Warning 
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c11"
    >
      <span
        className="c12"
      />
    </span>
     Danger 
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c13"
    >
      <span
        className="c14"
      />
    </span>
     Info 
  </label>
</div>
`;

exports[`Storyshots Atoms/Radio Custom Styles 1`] = `
.c0 {
  line-height: 3.3rem;
  cursor: pointer;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  cursor: pointer;
}

.c0:hover > span > span {
  -webkit-transform: scale(0.6);
  -ms-transform: scale(0.6);
  transform: scale(0.6);
  opacity: 1;
}

.c1 {
  display: none;
}

.c2 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #720afb;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c3 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #ac6efd;
  opacity: 0);
}

<label
  className="c0 custom-radio"
>
  <input
    className="c1"
    onChange={[Function]}
    type="radio"
  />
  <span
    className="c2"
  >
    <span
      className="c3"
    />
  </span>
  Custom styles
</label>
`;

exports[`Storyshots Atoms/Radio Disabled 1`] = `
.c0 {
  line-height: 3.3rem;
  cursor: pointer;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  cursor: not-allowed;
}

.c0:hover > span > span {
  -webkit-transform: scale(0.6);
  -ms-transform: scale(0.6);
  transform: scale(0.6);
  opacity: 1;
}

.c1 {
  display: none;
}

.c2 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #90849f;
  border-radius: 50%;
  background-color: #e2dfe6;
  margin-right: 0.5rem;
}

.c3 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #ac6efd;
  opacity: 0);
}

<label
  className="c0"
  disabled={true}
>
  <input
    className="c1"
    disabled={true}
    onChange={[Function]}
    type="radio"
  />
  <span
    className="c2"
    disabled={true}
  >
    <span
      className="c3"
      disabled={true}
    />
  </span>
  Disabled
</label>
`;

exports[`Storyshots Atoms/Radio Selected 1`] = `
.c0 {
  line-height: 3.3rem;
  cursor: pointer;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  cursor: pointer;
}

.c0:hover > span > span {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
}

.c1 {
  display: none;
}

.c2 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #720afb;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c3 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #720afb;
  opacity: 1;
}

<label
  className="c0"
  selected={true}
>
  <input
    checked={true}
    className="c1"
    onChange={[Function]}
    type="radio"
  />
  <span
    className="c2"
    selected={true}
  >
    <span
      className="c3"
      selected={true}
    />
  </span>
  Selected
</label>
`;

exports[`Storyshots Atoms/RadioGroup All 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  margin-right: 1.5rem;
}

.c1 {
  line-height: 3.3rem;
  cursor: pointer;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  cursor: pointer;
}

.c1:hover > span > span {
  -webkit-transform: scale(0.6);
  -ms-transform: scale(0.6);
  transform: scale(0.6);
  opacity: 1;
}

.c2 {
  display: none;
}

.c3 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #720afb;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c5 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #b988fd;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c7 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #08c8b8;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c9 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #fc9b57;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c11 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #fc4150;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c13 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #098dea;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c4 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #ac6efd;
  opacity: 0);
}

.c6 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #f4ecff;
  opacity: 0);
}

.c8 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #3ff7e8;
  opacity: 0);
}

.c10 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #fed7bb;
  opacity: 0);
}

.c12 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #fea5ac;
  opacity: 0);
}

.c14 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #60baf9;
  opacity: 0);
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c3"
    >
      <span
        className="c4"
      />
    </span>
     Primary 
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c5"
    >
      <span
        className="c6"
      />
    </span>
     Secondary 
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c7"
    >
      <span
        className="c8"
      />
    </span>
     Success 
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c9"
    >
      <span
        className="c10"
      />
    </span>
     Warning 
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c11"
    >
      <span
        className="c12"
      />
    </span>
     Danger 
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c13"
    >
      <span
        className="c14"
      />
    </span>
     Info 
  </label>
</div>
`;

exports[`Storyshots Atoms/RadioGroup Custom Styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 label {
  margin-right: 1.5rem;
}

.c1 {
  line-height: 3.3rem;
  cursor: pointer;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  cursor: pointer;
}

.c1:hover > span > span {
  -webkit-transform: scale(0.6);
  -ms-transform: scale(0.6);
  transform: scale(0.6);
  opacity: 1;
}

.c2 {
  display: none;
}

.c3 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #720afb;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c4 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #ac6efd;
  opacity: 0);
}

<div
  className="c0 custom-radio-group"
>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c3"
    >
      <span
        className="c4"
      />
    </span>
    Custom
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c3"
    >
      <span
        className="c4"
      />
    </span>
    Styles
  </label>
</div>
`;

exports[`Storyshots Atoms/RadioGroup Vertical 1`] = `
.c0 {
  display: grid;
}

.c0 label {
  margin-right: unset;
}

.c1 {
  line-height: 3.3rem;
  cursor: pointer;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  cursor: pointer;
}

.c1:hover > span > span {
  -webkit-transform: scale(0.6);
  -ms-transform: scale(0.6);
  transform: scale(0.6);
  opacity: 1;
}

.c5 {
  line-height: 3.3rem;
  cursor: pointer;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
  font-size: 16px;
  font-weight: 200;
  color: #433c4d;
  cursor: not-allowed;
}

.c5:hover > span > span {
  -webkit-transform: scale(0.6);
  -ms-transform: scale(0.6);
  transform: scale(0.6);
  opacity: 1;
}

.c2 {
  display: none;
}

.c3 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #720afb;
  border-radius: 50%;
  background-color: transparent;
  margin-right: 0.5rem;
}

.c6 {
  width: 1.5rem;
  height: 1.5rem;
  display: block;
  float: left;
  margin: 12px 0px 10px 0;
  border: 1px solid #90849f;
  border-radius: 50%;
  background-color: #e2dfe6;
  margin-right: 0.5rem;
}

.c4 {
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
  width: 1rem;
  height: 1rem;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  display: block;
  margin: 4px;
  border-radius: 50%;
  background-color: #ac6efd;
  opacity: 0);
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c3"
    >
      <span
        className="c4"
      />
    </span>
    One
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c3"
    >
      <span
        className="c4"
      />
    </span>
    Two
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c3"
    >
      <span
        className="c4"
      />
    </span>
    Three
  </label>
  <label
    className="c1"
  >
    <input
      className="c2"
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c3"
    >
      <span
        className="c4"
      />
    </span>
    Four
  </label>
  <label
    className="c5"
    disabled={true}
  >
    <input
      className="c2"
      disabled={true}
      onChange={[Function]}
      type="radio"
    />
    <span
      className="c6"
      disabled={true}
    >
      <span
        className="c4"
        disabled={true}
      />
    </span>
    Disabled
  </label>
</div>
`;

exports[`Storyshots Atoms/Row All 1`] = `
.c0 {
  width: 100%;
  max-width: 1200px;
  margin: auto;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  width: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0.5rem;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c2 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
  width: 100%;
}

<div
  className="c0"
  width="1200px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="#random"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="#random"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Row Custom Styles 1`] = `
.c0 {
  width: 100%;
  max-width: 1200px;
  margin: auto;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  width: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0.5rem;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c2 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
  width: 100%;
}

<div
  className="c0"
  width="1200px"
>
  <div
    className="c1 custom-row"
  >
    <div
      className="c2"
      color="#random"
    />
  </div>
  <div
    className="c1 custom-row"
  >
    <div
      className="c2"
      color="#random"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Row Width 1`] = `
.c0 {
  width: 100%;
  max-width: 500px;
  margin: auto;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c1 {
  width: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0.5rem;
  font-family: 'Euclid','Inter',-apple-system,BlinkMacSystemFont,'Roboto','Helvetica Neue ',sans-serif;
}

.c2 {
  background: ##random;
  height: 5rem;
  border-radius: 5px;
  width: 100%;
}

<div
  className="c0"
  width="500px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="#random"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="#random"
    />
  </div>
</div>
`;
